# full_package

chief_executive/: CMakeLists.txt  package.xml
chief_executive/include/chief_executive/: chief_executive.h
chief_executive/launch/: chief_executive.launch
chief_executive/src/: chief_executive.cpp  chief_executive_node.cpp  set_duty_client_node.cpp
controller/: CMakeLists.txt  controller_plugins.xml  custom_config.conf  package.xml
controller/cfg/: PurePursuitController.cfg  TrajectoryPlanner.cfg
controller/config/: trajectory_planner_ros.yaml
controller/include/controller_executive/: base_controller.h  base_controller_execution.h  controller_action.h  controller_action_server.h
controller/launch/: controller_executive.launch
controller/src/: base_controller_execution.cpp  controller_action.cpp  controller_action_server.cpp  controller_action_server_node.cpp
controller/src/pure_pursuit_controller/: pure_pursuit_controller.cpp  pure_pursuit_controller_execution.cpp
controller/src/trajectory_planner/: costmap_model.cpp  footprint_helper.cpp  goal_functions.cpp  map_cell.cpp  map_grid.cpp  map_grid_visualizer.cpp  trajectory.cpp  trajectory_planner.cpp  trajectory_planner_ros.cpp  trajectory_planner_ros_execution.cpp
executive/: .gitignore  CMakeLists.txt  custom_config.conf
executive/config/: mission_executive_params.yaml
executive/include/executive/: mission_executive.h
executive/launch/: gazebo_executive.launch  navigation.launch  test_fake_localization.launch  test_global_planner_pipeline.launch
executive/src/: .mission_executive_node.cpp.swp  mission_executive.cpp  mission_executive_node.cpp  set_route_client_node.cpp
executive/tests/: test_node.cpp
executive/unit_tests/: costmap_plan_test.cpp  simple_plan_test.cpp
gazebo_sim/src/rosbot_gazebo/: CMakeLists.txt  package.xml
global_planner/: .gitignore  CMakeLists.txt  README.md  custom_config.conf  global_planner_plugins.xml  package.xml
global_planner/cfg/: SimplePlanner.cfg
global_planner/config/: global_planner_action_server_params.yaml
global_planner/include/global_planner/: base_planner.h  base_planner_execution.h  planner_action.h  planner_action_server.h  simple_planner.h  simple_planner_execution.h
global_planner/launch/: global_planner.launch  test_planner_plugin.launch
global_planner/scripts/: visualize_route.py
global_planner/src/: base_planner_execution.cpp  planner_action.cpp  planner_action_server.cpp  planner_action_server_node.cpp  simple_planner.cpp  simple_planner_execution.cpp
global_planner/unit_test/: test_planner_plugin.cpp
localization/mwpfl/: CMakeLists.txt  package.xml
localization/mwpfl/launch/: gazebo_mwpfl.launch  start_mwpfl.launch
localization/mwpfl/src/: amcl_node.cpp
mapping/mw_mapping/: CMakeLists.txt  package.xml
mapping/mw_mapping/launch/: mw_mapping_rosbot_gazebo.launch  mw_mapping_start_from_bag.launch
mapping/mw_mapping/maps/: imap1.pgm  imap1.yaml  imap_7jan_a.pgm  imap_7jan_a.yaml  imap_full_1.pgm  imap_full_1.yaml  imap_sdp_1.pgm  imap_sdp_1.yaml  imap_sdp_2.pgm  imap_sdp_2.yaml  imap_st_1.pgm  imap_st_1.yaml  living_room.yaml  mymap.pgm
mlicense/: CMakeLists.txt  README.md  package.xml
mlicense/include/jwt-cpp/: base.h  jwt.h
mlicense/include/mlicense/: license.hpp
mlicense/include/picojson/: picojson.h
mlicense/scripts/: robot_reg.py
mlicense/src/: license.cpp  test_license.cpp
mw_core/: CMakeLists.txt  package.xml
mw_core/include/mw_core/: progress_checker.h  robot_information.h  types.h  utility_functions.h
mw_core/src/: progress_checker.cpp  robot_information.cpp  utility_functions.cpp
mw_msgs/: CMakeLists.txt  package.xml
mw_msgs/action/: ExePath.action  GetPath.action  Recovery.action
mw_msgs/msg/: ChiefExecutiveMode.msg  CostGrid.msg  Diagnostic.msg  Duty.msg  RobotStatus.msg  Route.msg  Task.msg  mission_status.msg
mw_msgs/srv/: GetCircumscribedRadius.srv  GetDuty.srv  GetPlan.srv  GetRoute.srv  GetRouteStatus.srv  GetSbplPlan.srv  GetTask.srv  GetTaskStatus.srv  LoadDutyFromFile.srv  LoadRouteFromFile.srv  LoadTaskFromFile.srv  SetCost.srv  SetDuty.srv  SetPlan.srv  SetRobotFootprint.srv  SetRoute.srv  SetString.srv  SetTask.srv
mw_navfn_planner/: CMakeLists.txt  custom_config.conf  global_planner_plugin.xml  package.xml
mw_navfn_planner/include/mw_navfn_planner/: navfn.hpp  navfn_planner.hpp  navfn_planner_execution.hpp
mw_navfn_planner/src/: navfn.cpp  navfn_planner.cpp  navfn_planner_execution.cpp
mw_teb/: .gitignore  CMakeLists.txt  README.md  controller_plugins.xml  custom_config.conf  package.xml  teb_local_planner_plugin.xml
mw_teb/cfg/: TebLocalPlannerReconfigure.cfg
mw_teb/config/: teb_local_planner_ros.yaml
mw_teb/include/mw_teb/: FeedbackMsg.h  TebLocalPlannerReconfigureConfig.h  TrajectoryMsg.h  distance_calculations.h  graph_search.h  h_signature.h  homotopy_class_planner.h  homotopy_class_planner.hpp  obstacles.h  optimal_planner.h  planner_interface.h  pose_se2.h  robot_footprint_model.h  teb_config.h  teb_local_planner_ros.h  teb_local_planner_ros_execution.h  timed_elastic_band.h  visualization.h  (+2 more)
mw_teb/launch/: controller_executive.launch  test_optim_node.launch
mw_teb/msg/: FeedbackMsg.msg
mw_teb/scripts/: export_to_mat.py  export_to_svg.py  visualize_velocity_profile.py
mw_teb/test/: teb_basics.cpp
recovery_executive/: CMakeLists.txt  custom_config.conf  package.xml  recovery_plugins.xml
recovery_executive/launch/: recovery_executive.launch
recovery_executive/plugins/: back_up_recovery.cpp  back_up_recovery_execution.cpp  clear_costmap_recovery.cpp  clear_costmap_recovery_execution.cpp  rotate_recovery.cpp  rotate_recovery_execution.cpp  stepback_and_steerturn_recovery.cpp  stepback_and_steerturn_recovery_execution.cpp
recovery_executive/src/: base_recovery_execution.cpp  recovery_action.cpp  recovery_action_server.cpp  recovery_action_server_node.cpp
task_executive/: CMakeLists.txt  package.xml
task_executive/launch/: gazebo_task_executive.launch
task_executive/src/: set_task_client_node.cpp  task_executive.cpp  task_executive_node.cpp
(+159 files in other folders)
