<?xml version="1.0"?>

<package format="2">
  <name>controller_executive</name>
  <version>1.1.0</version>

  <description>
    Controller Executive package to handle motion control
  </description>

  <maintainer email="sarthak.mittal@mowito.in">Sarthak MIttal</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mw_core</depend>
  <depend>mw_msgs</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pluginlib</depend>

  <export>
    <controller_executive plugin="${prefix}/controller_plugins.xml" />
  </export>
</package>