<?xml version="1.0"?>
<package format="2">
  <name>mlicense</name>
  <version>0.0.0</version>
  <description>License package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="puru@mowito.in">Puru Rastogi</maintainer>

  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
