<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>mw_core</name>
    <version>1.0.0</version>
    <description>The mw_core package. Contains files shared by multiple packages.</description>

    <maintainer email="sourav.agrawal@mowito.in">Sourav Agrawal</maintainer>

    <license>Proprietary</license>
    <author email="sourav.agrawal@mowito.in">Sourav Agrawal</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>tf</build_export_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>tf</exec_depend>

    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>

</package>
