<?xml version="1.0"?>

<package format="2">
  <name>mw_teb</name>
  <version>1.1.0</version>

  <description>
    Controller Executive plugin to handle motion control
  </description>

  <maintainer email="gupta.himanshu2493@gmail.com">Himanshu gupta</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf2_eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <!-- <build_depend>message_generation</build_depend> -->
  <!-- <build_depend>tf2_eigen</build_depend> -->
  <!--  -->
  <build_depend>tf2_geometry_msgs</build_depend>

  <!-- <build_export_depend>message_runtime</build_export_depend> -->

  <depend>roscpp</depend>
  <!-- <depend>geometry_msgs</depend> -->
  <!-- <depend>nav_core</depend> -->
  <depend>nav_msgs</depend>
  <depend>controller_executive</depend>
  <depend>mw_core</depend>
  <depend>mw_msgs</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pluginlib</depend>
  <depend>costmap_converter</depend>
  <depend>interactive_markers</depend>
  <depend>libg2o</depend>
  <depend>mbf_costmap_core</depend>
  <depend>mbf_msgs</depend>
  <!-- <depend>base_local_planner</depend> -->
  <!-- <depend>tf2</depend>
  <depend>tf2_ros</depend> -->
  <depend>visualization_msgs</depend>
  
  <export>
    <controller_executive plugin="${prefix}/controller_plugins.xml" />
  </export>
</package>
